--- a/roles/zookeeper/templates/supervisor.zookeeper.conf.j2
+++ b/roles/zookeeper/templates/supervisor.zookeeper.conf.j2
@@ -1,12 +1,11 @@
 [program:zookeeper]
-command={{zookeeper_install_dir}}/bin/zkServer.sh start-foreground
-user=root
+command={{zookeeper.dir}}/bin/zkServer.sh start-foreground
+user={{zookeeper.user}}
 autostart=true
 autorestart=true
 startsecs=10
 startretries=999
 log_stdout=true
 log_stderr=true
-logfile={{ zookeeper_install_dir}}/log/supervisor.log
 logfile_maxbytes=10MB
 logfile_backups=10
